update sonarcube build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,5 +10,7 @@ jobs:
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@v1.1.0
       with:
+        projectKey: "alex-lri_DevOps_TP"
+        projectName: "DevOps_TP"
         host: ${{ secrets.SONARQUBE_HOST }}
         login: ${{ secrets.SONARQUBE_TOKEN }}
