--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,13 +1,14 @@
-name: build
+name: Trivy Dependency Scanner
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-18.04
+    name: Scan
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -24,4 +25,4 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
