--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -11,15 +11,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
-      
+          docker build -t docker.io/DevOps_TP:${{ github.sha }} .
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          image-ref: 'docker.io/DevOps_TP:${{ github.sha }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
