--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -14,12 +14,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/DevOps_TP:${{ github.sha }} .
+          docker build -t docker.io/devops_tp:${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/DevOps_TP:${{ github.sha }}'
+          image-ref: 'docker.io/devops_tp:${{ github.sha }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
