--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -5,24 +5,25 @@ on:
       - main
 jobs:
   tests_unitaires:
-    build:
       name: Lancement des tests unitaires
       runs-on: ubuntu-latest
       strategy:
         matrix:
           node-version: [12.x, 14.x, 16.x]
       steps:
-        - uses: actions/checkout@v3
+        - name: Checkout
+          uses: actions/checkout@v3
+
         - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
         - name: installation des packages
-        run: npm ci
-        run: npm run build --if-present
-        run: npm test
+          run: npm ci
+          run: npm run build --if-present
+          run: npm test
 
   tests_Sonarcloud:
     name: Lancement des tests SonarCloud
