--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -22,7 +22,11 @@ jobs:
 
         - name: installation des packages
           run: npm ci
+
+        - name: Build
           run: npm run build --if-present
+
+        - name: Tests
           run: npm test
 
   tests_Sonarcloud:
