--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -81,3 +81,19 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVOPSTP }}'
           projectId: devopstp
+
+  notifs_Discord:
+    name: Discord Notifications
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: send custom message with args
+        uses: appleboy/discord-action@master
+        with:
+          webhook_id: ${{ secrets.WEBHOOK_ID }}
+          webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
+          username: "Mon Bot qui marche trop bien"
+          args: The ${{ github.event_name }} event triggered first step.
+          message: "Let's gooooooooooooooo!!!!!!!!!!!!!."
