update firebase deployment

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -81,6 +81,8 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVOPSTP }}'
           projectId: devopstp
+          channelId: live
+          target: devopstp
 
   notifs_Discord:
     name: Discord Notifications
